fix: puzzle fill color in dark mode

--- a/packages/uhk-web/src/app/components/svg/module/svg-module.component.scss
+++ b/packages/uhk-web/src/app/components/svg/module/svg-module.component.scss
@@ -7,7 +7,7 @@
         cursor: pointer;
 
         path {
-            fill: white;
+            fill: var(--color-module-puzzle-path-fill);
         }
 
         &:hover {
