--- a/packages/uhk-web/src/styles/themes/_light.scss
+++ b/packages/uhk-web/src/styles/themes/_light.scss
@@ -64,6 +64,7 @@ $input-focus-border-color: lighten($component-active-bg, 25%) !default;
     --color-keyboard-key-bg: #{$color-bg-light};
     --color-keyboard-key-hover: #737373;
     --color-keyboard-key-active: #{$primary};
+    --color-module-puzzle-path-fill: #{$white};
 
     --color-input-border: #ccc;
     --color-btn-secondary-border: #ccc;
